# Wheeledbase

./: .gitmodules  CMakeLists.txt  README.md  library.json
include/: Wheeledbase.h
include/Components/: AbstractTimer.h  Codewheel.h  Odometry.h
include/Controller/: DifferentialController.h  PID.h  PositionController.h  VelocityController.h
include/MoveStrategy/: BasicMoveStrategy.h  BasicTurnStrategy.h  PurePursuit.h  TurnOnTheSpot.h
lib/: My_Clock.h
lib/Codewheel/: AbstractTimer.h  Codewheel.cpp  Codewheel.h
lib/Logger/: Logger.cpp  Logger.h  coloring.h
lib/Odometry/: Odometry.cpp  Odometry.h
lib/PID/: PID.cpp
lib/PeriodicProcess/: PeriodicProcess.h
lib/mathutils/: mathutils.cpp  mathutils.h
src/: Wheeledbase.cpp
src/Components/: Codewheel.cpp  Odometry.cpp
src/Controller/: DifferentialController.cpp  PID.cpp  PositionController.cpp  VelocityController.cpp
src/MoveStrategy/: BasicMoveStrategy.cpp  BasicTurnStrategy.cpp  PurePursuit.cpp  TurnOnTheSpot.cpp
src/lib/Logger/: Logger.cpp
src/lib/PeriodicProcess/: PeriodicProcess.cpp
src/lib/mathutils/: mathutils.cpp
src/lib/motors/include/: AbstractDriver.h  AbstractMotors.h  DCMotor.h  DRV8844.h  DRV8876.h  I2CDCDriver.h  NonCopyable.h  WheelMotor.h
src/lib/motors/lib/ShiftRegister/: ShiftRegister.h
src/lib/motors/src/: DRV8844.cpp  DRV8876.cpp  I2CDCDriver.cpp
